Fix: Metadata bug fixes
* Fixes IE11 CSS issues
* Fixes text overflowing issues for templates
* Fixes collab issue of not being able to delete template
* Adds some missing unit tests

--- a/src/components/ContentSidebar/MetadataSidebar.scss
+++ b/src/components/ContentSidebar/MetadataSidebar.scss
@@ -2,8 +2,11 @@
 
 .be.bcs.bcs-metadata {
     .metadata-instance-editor {
-        min-height: 400px;
         padding: 0 10px 20px 25px;
+
+        .collapsible-card {
+            margin-top: 10px;
+        }
     }
 
     .metadata-instance-editor-header {
